# napthaville_persona_agent

./: .gitignore  pyproject.toml
napthaville_chat/: pyproject.toml  run.py  schemas.py
napthaville_chat/configs/: deployment.json
napthaville_chat/napthaville_chat/: run.py
napthaville_chat/napthaville_chat/persona/: persona.py
napthaville_chat/napthaville_chat/persona/cognitive_modules/: converse.py  execute.py  perceive.py  plan.py  retrieve.py
napthaville_chat/napthaville_chat/persona/memory/: associative_memory.py  scratch.py
napthaville_chat/napthaville_chat/persona/prompts/: prompts.py  run_gpt_prompt.py
napthaville_chat/persona/: persona.py
napthaville_chat/persona/cognitive_modules/: converse.py  execute.py  perceive.py  plan.py  reflect.py
napthaville_chat/persona/memory/: associative_memory.py  scratch.py  spatial.py
napthaville_chat/persona/prompts/: run_gpt_prompt.py
napthaville_environment/: maze.py  run.py  schemas.py  utils.py
napthaville_environment/configs/: deployment.json
napthaville_memory/: run.py  schemas.py
napthaville_memory/configs/: deployment.json
napthaville_memory/memory/: associative.py  scratch.py  spatial.py
napthaville_orchestrator/configs/: deployment.json
napthaville_persona_agent/maze/: maze.py
napthaville_persona_agent/persona/: persona.py
napthaville_persona_agent/persona/cognitive_modules/: converse.py  execute.py  perceive.py  plan.py
napthaville_persona_agent/persona/memory/: associative_memory.py  (+1 more)
nbs/: memory.ipynb  person.ipynb  simulation.ipynb  test-local-db.ipynb  test-local-db2.ipynb
(+4 files in other folders)
