[tool.poetry]
name = "napthaville_chat"
version = "0.1.0"
description = "A chat agent for napthaville social simulation" 
authors = ["Mohamed Arshath <marshath@gmail.com>"]
readme = "README.md"
packages = [
    {include = "napthaville_chat", from="."},
]
[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk.git"}
pydantic = "^2.10.6"
numpy = "^2.2.3"
tenacity = "^9.0.0"
openai = "^1.64.0"
instructor = "^1.7.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"